[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "vulnlab"
version = "0.2.0"
description = "Terminal-first CLI for launching vulnerable local labs with Docker."
readme = "README.md"
requires-python = ">=3.9"
authors = [
  { name = "Jordi Portabella" }
]
license = { text = "MIT" }
keywords = ["security", "training", "docker", "pentesting", "labs", "ctf"]
classifiers = [
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Operating System :: OS Independent",
  "Topic :: Security",
  "Topic :: Education",
]

[project.urls]
Homepage = "https://github.com/your-user/vulnlab"
Repository = "https://github.com/your-user/vulnlab"
Issues = "https://github.com/your-user/vulnlab/issues"

[project.scripts]
vulnlab = "vulnlab.cli:main"

[tool.setuptools]
packages = ["vulnlab"]
